fix mobile menu color and spacing

--- a/css/spectre.css
+++ b/css/spectre.css
@@ -2378,7 +2378,6 @@ summary.accordion-header::-webkit-details-marker {
 }
 
 .menu {
-  box-shadow: 0 0.05rem 0.2rem rgba(0, 0, 0, 0.3);
   background: #fff;
   border-radius: 0.1rem;
   list-style: none;
