--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -34,7 +34,7 @@ $dropmenu-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 
 // Mobile Menu
 $mobile-color-main: $light-color;
-$mobile-color-active: #FFF;
-$mobile-color-link: #FFF;
+$mobile-color-active: #fff;
+$mobile-color-link: #fff;
 $mobile-button-height: 24px;
 $mobile-button-width: 28px;
